FIxed the hero image not covering the image space vertically.

--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -2359,9 +2359,7 @@ html {
           /* Positioning */
           /* Display and Box model */
           box-sizing: content-box;
-          height: 100%;
           overflow: hidden;
-          width: 100%;
           /* Typography */
           /* Other */
 
@@ -2370,6 +2368,7 @@ html {
             position: fixed;
             z-index: -1;
             /* Display and Box model */
+            height: 100%;
             min-height: calc(100vh * 0.65);
             object-fit: cover;
             width: 100%;
